# pyrealpro-format

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checks_tests.yml  checks_tests_docs.yml
pyrealpro_format/: __init__.py  model.py
test/: test_model.py
utils/: download_playlists.py
